@@ -61,6 +61,7 @@ OpenLDAP 2.4.24 Engineering
 	Fixed slapd syncrepl reuse of presence list (ITS#6707)
 	Fixed slapd syncrepl uninitialized return code (ITS#6719)
 	Fixed slapd syncrepl variable initialization (ITS#6739)
+	Fixed slapd syncrepl refresh to use complete cookie (ITS#6807)
 	Fixed slapd-bdb hasSubordinates generation (ITS#6712)
 	Fixed slapd-bdb entry cache delete failure (ITS#6577)
 	Fixed slapd-bdb entry cache leak on multi-core systems (ITS#6660)
